# financial_ml

./: .gitignore  back_eng.ipynb  cleaning_modelling.ipynb  feature_engineering.ipynb  pyproject.toml
bars/: aapl_dollar_bars.h5
utils/: cusum.py  entropy.py  feature_generation.py  fractional_diff.py  labeling.py  multiprocessing.py
