[project]
name = "financial-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.4",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "pathlib>=1.0.1",
    "statsmodels>=0.14.6",
    "tables>=3.11.1",
    "tqdm>=4.67.3",
]
